[package]
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
categories = ["game-development"]
description = "A camera that allows panning by dragging with the mouse"
edition = "2021"
keywords = ["gamedev", "bevy"]
license = "MIT OR Apache-2.0"
name = "bevy_pancam"
repository = "https://github.com/ka-de/bevy_pancam"
version = "0.11.1"

[features]
bevy_egui = ["dep:bevy_egui"]

[dependencies]
bevy = { version = "0.13.2", features = [
  "bevy_render",
], default-features = false }
bevy_egui = { git = "https://github.com/ka-de/bevy_egui", optional = true, default-features = false }

[dev-dependencies]
bevy = { version = "0.13.2", default-features = false, features = [
  "bevy_render",
  "bevy_asset",
  "bevy_sprite",
  "bevy_winit",
  "bevy_core_pipeline",
  "x11",
] }
bevy-inspector-egui = { git = "https://github.com/ka-de/bevy-inspector-egui", default-features = false }
bevy_egui = { git = "https://github.com/ka-de/bevy_egui", default-features = false, features = [
  "default_fonts",
] }
rand = "0.8"

[[example]]
name = "egui"
required-features = ["bevy_egui"]

[[example]]
name = "inspector"
required-features = ["bevy_egui"]
